# multiple_agent_chatbot

./: app.py  multiagent.py  pyproject.toml
multiagent_task/: app.py  multiagent.py
multiagent_task/static/: script.js  styles.css
multiagent_task/templates/: index.html
templates/: index.html  script.js  styles.css
